syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

message RandomSeed {
  string participant = 1;
  int64 block_height = 2;
  string signature = 3;
  // epoch group id?
}
